; ModuleID = '/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_thread_mutex.c_ngx_thread_mutex_destroy.c'
source_filename = "/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_thread_mutex.c_ngx_thread_mutex_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NGX_LOG_ALERT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"pthread_mutex_destroy() failed\00", align 1
@NGX_ERROR = common dso_local global i32 0, align 4
@NGX_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_thread_mutex_destroy(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @pthread_mutex_destroy(i32* %7)
  store i64 %8, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load i32, i32* @NGX_LOG_ALERT, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @ngx_log_error(i32 %12, i32* %13, i64 %14, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %16 = load i32, i32* @NGX_ERROR, align 4
  store i32 %16, i32* %3, align 4
  br label %19

17:                                               ; preds = %2
  %18 = load i32, i32* @NGX_OK, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %17, %11
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i64 @pthread_mutex_destroy(i32*) #1

declare dso_local i32 @ngx_log_error(i32, i32*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
